--- a/index.html
+++ b/index.html
@@ -200,8 +200,7 @@ href="https://fonts.googleapis.com/css2?family=Kulim Park:wght@600&display=swap"
                   <div class="one-on-one">Don’t Compromise on Education</div>
                   <h1 class="learn-how-to stop">Your One Stop Solution!</h1>
                   <div class="makers-is-a">
-                    Makers is a Figma Plugin to help you build and publish sites
-                    directly in Figma. No code required.
+                    Join our cohort and embarl on a journey towards unstoppable growth and success
                   </div>
                 </div>
                 <div class="edverb">
@@ -228,9 +227,6 @@ href="https://fonts.googleapis.com/css2?family=Kulim Park:wght@600&display=swap"
               <div class="edverb1">
                 <div class="makers-button1">
                   <div class="button">Continue</div>
-                </div>
-                <div class="makers-button1">
-                  <div class="button">Button</div>
                 </div>
               </div>
             </div>
